@@ -117,7 +117,7 @@ public class PackagerExtensionBlockEntity extends BaseBlockEntity {
 		if(currentPattern == null) {
 			return false;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			return false;
 		}
@@ -163,7 +163,7 @@ public class PackagerExtensionBlockEntity extends BaseBlockEntity {
 		if(powered) {
 			return;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			return;
 		}
@@ -232,7 +232,7 @@ public class PackagerExtensionBlockEntity extends BaseBlockEntity {
 			endProcess();
 			return;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			endProcess();
 			return;
