@@ -3,7 +3,6 @@ package thelm.packagedauto.block.entity;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 
@@ -92,8 +91,8 @@ public class UnpackagerBlockEntity extends BaseBlockEntity {
 	}
 
 	protected void fillTrackers() {
-		List<PackageTracker> emptyTrackers = Arrays.stream(trackers).limit(trackerCount).filter(t->t.isEmpty()).collect(Collectors.toList());
-		List<PackageTracker> nonEmptyTrackers = Arrays.stream(trackers).filter(t->!t.isEmpty()).filter(t->!t.isFilled()).collect(Collectors.toList());
+		List<PackageTracker> emptyTrackers = Arrays.stream(trackers).limit(trackerCount).filter(t->t.isEmpty()).toList();
+		List<PackageTracker> nonEmptyTrackers = Arrays.stream(trackers).filter(t->!t.isEmpty()).filter(t->!t.isFilled()).toList();
 		for(int i = 0; i < 9; ++i) {
 			if(energyStorage.getEnergyStored() >= energyUsage) {
 				ItemStack stack = itemHandler.getStackInSlot(i);
@@ -172,7 +171,11 @@ public class UnpackagerBlockEntity extends BaseBlockEntity {
 				ordered = recipeType.isOrdered();
 			}
 			BlockEntity blockEntity = level.getBlockEntity(worldPosition.relative(direction));
-			if(blockEntity == null || blockEntity instanceof PackagerBlockEntity || blockEntity instanceof UnpackagerBlockEntity || isPatternProvider(blockEntity, direction.getOpposite())) {
+			if(blockEntity == null ||
+					blockEntity instanceof PackagerBlockEntity ||
+					blockEntity instanceof PackagerExtensionBlockEntity ||
+					blockEntity instanceof UnpackagerBlockEntity ||
+					isPatternProvider(blockEntity, direction.getOpposite())) {
 				trackerToEmpty.direction = null;
 				continue;
 			}
@@ -205,7 +208,11 @@ public class UnpackagerBlockEntity extends BaseBlockEntity {
 				continue;
 			}
 			BlockEntity blockEntity = level.getBlockEntity(worldPosition.relative(direction));
-			if(blockEntity == null || blockEntity instanceof PackagerBlockEntity || blockEntity instanceof UnpackagerBlockEntity || isPatternProvider(blockEntity, direction.getOpposite())) {
+			if(blockEntity == null ||
+					blockEntity instanceof PackagerBlockEntity ||
+					blockEntity instanceof PackagerExtensionBlockEntity ||
+					blockEntity instanceof UnpackagerBlockEntity ||
+					isPatternProvider(blockEntity, direction.getOpposite())) {
 				continue;
 			}
 			if(trackerToEmpty.toSend.isEmpty()) {
@@ -446,7 +453,7 @@ public class UnpackagerBlockEntity extends BaseBlockEntity {
 			}
 			nbt.put("ToSend", MiscHelper.INSTANCE.saveAllItems(new ListTag(), toSend));
 			if(direction != null) {
-				nbt.putByte("Facing", (byte)direction.get3DDataValue());
+				nbt.putByte("Direction", (byte)direction.get3DDataValue());
 			}
 		}
 
